# autora-experimentalist-lhs

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: Basic Usage.ipynb  index.md  quickstart.md
src/autora/experimentalist/lhs/: __init__.py
tests/: test_lhs.py
